test/fail/ac/principalwrongcred.app
//is not a property of entity

application test

section principal

entity User{
name :: String
}

principal is User with credentials nam